Fix wrapping

--- a/pages/meds/medications.css
+++ b/pages/meds/medications.css
@@ -175,10 +175,6 @@ thead th {
   text-align: center;
 }
 
-input[type="time"] {
-  width: 100%;
-}
-
 input:disabled {
   opacity: 0.7;
   cursor: not-allowed;
@@ -369,7 +365,7 @@ input:disabled {
 .col-drug {
   position: sticky;
   left: 0;
-  min-width: 180px;
+  max-width: 180px;
   overflow: visible;
 }
 
